--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="textSizeToolbar">20sp</dimen>
     <dimen name="listItemImageWidth">64dp</dimen>
     <dimen name="listItemImageHeight">64dp</dimen>
+    <dimen name="detailImageWidth">128dp</dimen>
+    <dimen name="detailImageHeight">128dp</dimen>
 </resources>
