--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            android:clipChildren="false"
+            android:clipToPadding="false"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <TextView
@@ -25,8 +27,6 @@
                 fontPath="@string/fontPathHeadline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/margin"
                 android:text="@string/app_name"
                 android:textColor="?attr/colorAccent"
                 android:textSize="@dimen/textSizeToolbar" />
