--- a/app/src/main/res/layout/fragment_nearby_breweries.xml
+++ b/app/src/main/res/layout/fragment_nearby_breweries.xml
@@ -9,33 +9,57 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/filterBackground"
-        android:elevation="4dp"
-        android:padding="@dimen/margin">
+        android:elevation="2dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/marginSmall"
+        android:paddingRight="@dimen/marginSmall">
 
         <TextView
             android:id="@+id/mapLabel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/marginSmall"
+            android:paddingRight="@dimen/marginTiny"
             android:text="Map"
             android:textAllCaps="true"
             android:textSize="@dimen/textSizeSmall" />
 
-        <Switch
+        <android.support.v7.widget.SwitchCompat
             android:id="@+id/listMapSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marginSmall"
-            android:layout_marginRight="@dimen/marginSmall"
-            android:checked="true" />
+            android:checked="true"
+            android:theme="@style/AlwaysColorizedSwitch" />
 
         <TextView
             android:id="@+id/listLabel"
             fontPath="@string/fontPathBold"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingBottom="@dimen/margin"
+            android:paddingLeft="@dimen/marginTiny"
+            android:paddingRight="@dimen/marginSmall"
+            android:paddingTop="@dimen/margin"
             android:text="List"
+            android:textAllCaps="true"
+            android:textSize="@dimen/textSizeSmall" />
+
+        <TextView
+            android:id="@+id/sort"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableLeft="@drawable/ic_sort_24dp"
+            android:drawablePadding="@dimen/marginTiny"
+            android:gravity="center_vertical"
+            android:lines="1"
+            android:paddingLeft="@dimen/marginSmall"
+            android:paddingRight="@dimen/marginSmall"
+            android:text="Sorted by Distance"
             android:textAllCaps="true"
             android:textSize="@dimen/textSizeSmall" />
 
@@ -43,25 +67,35 @@
             android:id="@+id/myLocation"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/marginLarge"
-            android:layout_marginRight="@dimen/marginLarge"
+            android:background="?android:attr/selectableItemBackground"
             android:drawableLeft="@drawable/ic_my_location_24dp"
-            android:drawablePadding="@dimen/marginSmall"
+            android:drawablePadding="@dimen/marginTiny"
             android:gravity="center_vertical"
+            android:lines="1"
+            android:paddingLeft="@dimen/marginSmall"
+            android:paddingRight="@dimen/marginSmall"
             android:text="My Location"
             android:textAllCaps="true"
-            android:textSize="@dimen/textSizeSmall" />
+            android:textSize="@dimen/textSizeSmall"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/layers"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground"
             android:drawableLeft="@drawable/ic_layers_24dp"
-            android:drawablePadding="@dimen/marginSmall"
+            android:drawablePadding="@dimen/marginTiny"
             android:gravity="center_vertical"
+            android:lines="1"
+            android:paddingLeft="@dimen/marginSmall"
+            android:paddingRight="@dimen/marginSmall"
             android:text="Streets"
             android:textAllCaps="true"
-            android:textSize="@dimen/textSizeSmall" />
+            android:textSize="@dimen/textSizeSmall"
+            android:visibility="gone"
+            tools:visibility="visible" />
     </LinearLayout>
 
     <FrameLayout
