--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,16 @@
         <item name="android:colorForeground">?colorAccent</item>
     </style>
 
+    <style name="CollapsedTitleTextAppearance">
+        <item name="android:textSize">@dimen/textSizeToolbar</item>
+        <item name="android:textColor">?colorAccent</item>
+    </style>
+
+    <style name="ExpandedTitleTextAppearance">
+        <item name="android:textSize">@dimen/textSizeDetailHeadline</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:shadowColor">#44000000</item>
+        <item name="android:shadowRadius">4</item>
+    </style>
+
 </resources>
