--- a/app/src/main/res/layout/fragment_nearby_breweries.xml
+++ b/app/src/main/res/layout/fragment_nearby_breweries.xml
@@ -30,7 +30,7 @@
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/listMapSwitch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:checked="true"
             android:theme="@style/AlwaysColorizedSwitch" />
 
