--- a/app/src/main/res/layout/fragment_nearby_breweries.xml
+++ b/app/src/main/res/layout/fragment_nearby_breweries.xml
@@ -1,115 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/slidingLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:gravity="bottom"
+    sothree:umanoAnchorPoint="0.66"
+    sothree:umanoClipPanel="true"
+    sothree:umanoDragView="@+id/dragView"
+    sothree:umanoFadeColor="@android:color/transparent"
+    sothree:umanoInitialState="anchored"
+    sothree:umanoOverlay="false"
+    sothree:umanoPanelHeight="?attr/actionBarSize"
+    sothree:umanoParallaxOffset="200dp"
+    sothree:umanoScrollableView="@+id/listView"
+    sothree:umanoShadowHeight="4dp"
     tools:ignore="MissingPrefix">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/filterBackground"
-        android:elevation="2dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/marginSmall"
-        android:paddingRight="@dimen/marginSmall">
-
-        <TextView
-            android:id="@+id/mapLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/marginSmall"
-            android:paddingRight="@dimen/marginTiny"
-            android:text="Map"
-            android:textAllCaps="true"
-            android:textSize="@dimen/textSizeSmall" />
-
-        <android.support.v7.widget.SwitchCompat
-            android:id="@+id/listMapSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:checked="true"
-            android:theme="@style/AlwaysColorizedSwitch" />
-
-        <TextView
-            android:id="@+id/listLabel"
-            fontPath="@string/fontPathBold"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:paddingBottom="@dimen/margin"
-            android:paddingLeft="@dimen/marginTiny"
-            android:paddingRight="@dimen/marginSmall"
-            android:paddingTop="@dimen/margin"
-            android:text="List"
-            android:textAllCaps="true"
-            android:textSize="@dimen/textSizeSmall" />
-
-        <TextView
-            android:id="@+id/sort"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
-            android:drawableLeft="@drawable/ic_sort_24dp"
-            android:drawablePadding="@dimen/marginTiny"
-            android:gravity="center_vertical"
-            android:lines="1"
-            android:paddingLeft="@dimen/marginSmall"
-            android:paddingRight="@dimen/marginSmall"
-            android:text="Sorted by Distance"
-            android:textAllCaps="true"
-            android:textSize="@dimen/textSizeSmall" />
-
-        <TextView
-            android:id="@+id/myLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
-            android:drawableLeft="@drawable/ic_my_location_24dp"
-            android:drawablePadding="@dimen/marginTiny"
-            android:gravity="center_vertical"
-            android:lines="1"
-            android:paddingLeft="@dimen/marginSmall"
-            android:paddingRight="@dimen/marginSmall"
-            android:text="My Location"
-            android:textAllCaps="true"
-            android:textSize="@dimen/textSizeSmall"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/layers"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="?android:attr/selectableItemBackground"
-            android:drawableLeft="@drawable/ic_layers_24dp"
-            android:drawablePadding="@dimen/marginTiny"
-            android:gravity="center_vertical"
-            android:lines="1"
-            android:paddingLeft="@dimen/marginSmall"
-            android:paddingRight="@dimen/marginSmall"
-            android:text="Streets"
-            android:textAllCaps="true"
-            android:textSize="@dimen/textSizeSmall"
-            android:visibility="gone"
-            tools:visibility="visible" />
-    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        tools:context=".ui.activity.MainActivity">
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/filterBackground"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/marginSmall"
+            android:paddingRight="@dimen/marginSmall"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/mapLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/marginSmall"
+                android:paddingRight="@dimen/marginTiny"
+                android:text="Map"
+                android:textAllCaps="true"
+                android:textSize="@dimen/textSizeSmall" />
+
+            <android.support.v7.widget.SwitchCompat
+                android:id="@+id/listMapSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:checked="true"
+                android:theme="@style/AlwaysColorizedSwitch" />
+
+            <TextView
+                android:id="@+id/listLabel"
+                fontPath="@string/fontPathBold"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:paddingBottom="@dimen/margin"
+                android:paddingLeft="@dimen/marginTiny"
+                android:paddingRight="@dimen/marginSmall"
+                android:paddingTop="@dimen/margin"
+                android:text="List"
+                android:textAllCaps="true"
+                android:textSize="@dimen/textSizeSmall" />
+
+            <TextView
+                android:id="@+id/myLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_my_location_24dp"
+                android:drawablePadding="@dimen/marginTiny"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:paddingLeft="@dimen/marginSmall"
+                android:paddingRight="@dimen/marginSmall"
+                android:text="My Location"
+                android:textAllCaps="true"
+                android:textSize="@dimen/textSizeSmall"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/layers"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableLeft="@drawable/ic_layers_24dp"
+                android:drawablePadding="@dimen/marginTiny"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:paddingLeft="@dimen/marginSmall"
+                android:paddingRight="@dimen/marginSmall"
+                android:text="Streets"
+                android:textAllCaps="true"
+                android:textSize="@dimen/textSizeSmall"
+                android:visibility="gone"
+                tools:visibility="visible" />
+        </LinearLayout>
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible" />
+            android:layout_height="match_parent" />
 
         <com.saschahuth.brewy.ui.view.LocationItemView
             android:id="@+id/markerLocationView"
@@ -119,22 +113,23 @@
             android:elevation="1dp"
             android:visibility="gone"
             tools:visibility="visible" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ListView
-                android:id="@+id/listView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:divider="@null"
-                android:paddingTop="@dimen/marginSmall"
-                android:scrollbarStyle="outsideOverlay"
-                android:scrollbars="vertical"
-                tools:listitem="@layout/item_brewery" />
-        </FrameLayout>
-
     </FrameLayout>
-</LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/dragView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:divider="@null"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical"
+            tools:listitem="@layout/item_brewery" />
+    </FrameLayout>
+
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
