--- a/app/src/main/res/layout/fragment_nearby_breweries.xml
+++ b/app/src/main/res/layout/fragment_nearby_breweries.xml
@@ -93,13 +93,13 @@
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="60px" />
 
         <com.saschahuth.brewy.ui.view.LocationItemView
             android:id="@+id/markerLocationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/defaultBackground"
             android:elevation="1dp"
             android:visibility="gone"
             tools:visibility="visible" />
@@ -109,13 +109,12 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/defaultBackground"
         android:clipToPadding="false"
         android:divider="@null"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
         app:behavior_hideable="false"
-        app:behavior_peekHeight="?attr/actionBarSize"
+        app:behavior_peekHeight="260px"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
         tools:listitem="@layout/item_brewery" />
 
